--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <a href="contato.html">Contato</a>
     <a href="privacidade.html">Privacidade</a>
     <a href="termos.html">Termos</a>
-    <a href="aulas.html">Acesse todas as aulas aqui!</a>
 
   </nav>
 </header>
@@ -35,6 +34,11 @@
     <a href="post.html">Ler resumo →</a>
   </div>
 
+  <div class="card">
+    <h2><a href="aulas.html">Começe as aulas aqui!</a></h2>
+    <p>Aqui estão todas as aulas do nosso curso básico de programação!</p>
+  </div>
+
 </section>
 
 </main>
@@ -45,3 +49,5 @@
 
 </body>
 </html>
+
+
