--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>Curso completo de Programação</title>
 <meta name="description" content="Curso moderno e completo de programação do zero ao avançado">
 <link rel="stylesheet" href="css/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -49,5 +51,3 @@
 
 </body>
 </html>
-
-
