--- a/aula3-algoritmos.html
+++ b/aula3-algoritmos.html
@@ -215,26 +215,24 @@ O código nada mais é do que a tradução desses passos para uma linguagem que 
 
 <h2>>⭐ Importância dos Algoritmos</h2>
 
-<p></p>Algoritmos são importantes porque:
+<p></p><strong>Algoritmos são importantes porque:</strong>
 
-✔️ Organizam o pensamento
-✔️ Evitam erros lógicos
-✔️ Facilitam manutenção de sistemas
-✔️ Melhoram desempenho
-✔️ Servem para qualquer linguagem
+<p></p>✔️ Organizam o pensamento
+<p></p>✔️ Evitam erros lógicos
+<p></p>✔️ Facilitam manutenção de sistemas
+<p></p>✔️ Melhoram desempenho
+<p></p>✔️ Servem para qualquer linguagem
 
-📌 Quem entende algoritmos não fica preso a uma única tecnologia.
+<p></p>📌 Quem entende algoritmos não fica preso a uma única tecnologia.
 
-🚀 Conclusão Motivacional
+<h2>🚀 Conclusão Motivacional</h2>
 
-Aprender algoritmos é aprender a pensar como um programador.
+<p></p>Aprender algoritmos é aprender a pensar como um programador.
 
-No início, pode parecer difícil, mas com prática você começa a enxergar lógica em tudo ao seu redor.
+<p></p>No início, pode parecer difícil, mas com prática você começa a enxergar lógica em tudo ao seu redor.
 
-💡 Antes de escrever código, escreva o algoritmo.
-Essa é uma das maiores diferenças entre iniciantes e programadores experientes.
-
-👉 Na próxima aula, vamos transformar esses algoritmos em código real, passo a passo.
+<p></p>💡 Antes de escrever código, escreva o algoritmo.
+<p></p>Essa é uma das maiores diferenças entre iniciantes e programadores experientes.
 
 <div style="margin-top: 50px; text-align: center;">
   <a href="aulas.html" class="back-btn">⬅ Voltar</a>
@@ -249,3 +247,4 @@ Essa é uma das maiores diferenças entre iniciantes e programadores experientes
 
 </body>
 </html>
+
