--- a/aulas.html
+++ b/aulas.html
@@ -5,6 +5,7 @@
   <title>Aulas | Curso de Programação</title>
   <meta name="description" content="Escolha sua aula do curso completo de programação">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -62,3 +63,4 @@
 
 </body>
 </html>
+
