--- a/aula1-introducao.html
+++ b/aula1-introducao.html
@@ -5,6 +5,7 @@
   <title>Aula 1 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -184,3 +185,4 @@ Essas instruções são escritas em linguagens de programação, como HTML, CSS,
 
 </body>
 </html>
+
