--- a/aula1-introducao.html
+++ b/aula1-introducao.html
@@ -5,21 +5,17 @@
   <title>Aula 1 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <header>
   <nav class="menu">
     <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
-    <a href="privacidade.html">Privacidade</a>
-    <a href="termos.html">Termos</a>
+    <a href="aulas.html">Aulas</a>
   </nav>
 </header>
 
-<main>
+<main class="lesson-content">
   <article class="card">
 
    <h1>Aula 1 — Introdução à Programação</h1>
@@ -185,4 +181,3 @@ Essas instruções são escritas em linguagens de programação, como HTML, CSS,
 
 </body>
 </html>
-
