--- a/aula2-logica.html
+++ b/aula2-logica.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Aula X | Curso de Programação</title>
+  <title>Aula 2 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula X">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +11,11 @@
 <header>
   <nav class="menu">
     <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
-    <a href="privacidade.html">Privacidade</a>
-    <a href="termos.html">Termos</a>
+    <a href="aulas.html">Aulas</a>
   </nav>
 </header>
 
-<main>
+<main class="lesson-content">
   <article class="card">
 
 <h1>🧠 Aula 2 — Lógica de Programação</h1>
@@ -163,7 +160,6 @@
 <p></p>💡 Se você aprender lógica de verdade, o resto vira ferramenta.
 <p></p>Continue praticando, errando e tentando — é assim que bons programadores são formados.
 
-
 <div style="margin-top: 50px; text-align: center;">
   <a href="aulas.html" class="back-btn">⬅ Voltar</a>
 </div>
@@ -177,4 +173,3 @@
 
 </body>
 </html>
-
