--- a/aula4-htmlbasico.html
+++ b/aula4-htmlbasico.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Aula 1 | Curso de Programação</title>
+  <title>Aula 4 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +11,11 @@
 <header>
   <nav class="menu">
     <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
-    <a href="privacidade.html">Privacidade</a>
-    <a href="termos.html">Termos</a>
+    <a href="aulas.html">Aulas</a>
   </nav>
 </header>
 
-<main>
+<main class="lesson-content">
   <article class="card">
 
 <h1>🌐 Aula 4 — HTML Básico</h1>
@@ -27,7 +24,7 @@
       sua estrutura básica, principais tags, semântica, boas práticas e como
       usar HTML para melhorar o SEO de um site.
     </p>
-  </header>
+  
 
   <main>
 
