--- a/aula5-htmlavancado.html
+++ b/aula5-htmlavancado.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Aula 1 | Curso de Programação</title>
+  <title>Aula 5 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +11,11 @@
 <header>
   <nav class="menu">
     <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="contato.html">Contato</a>
-    <a href="privacidade.html">Privacidade</a>
-    <a href="termos.html">Termos</a>
+    <a href="aulas.html">Aulas</a>
   </nav>
 </header>
 
-<main>
+<main class="lesson-content">
   <article class="card">
 
 <h1>🌐 Aula 5 — HTML Avançado</h1>
@@ -28,7 +25,7 @@
       profissionais, acessíveis, seguros e otimizados para mecanismos de busca,
       utilizando os padrões mais modernos do HTML5.
     </p>
-  </header>
+  
 
   <main>
 
