--- a/aulas.html
+++ b/aulas.html
@@ -53,6 +53,23 @@
     <a href="aula4-htmlbasico.html">Acessar aula →</a>
   </div>
 
+   <div class="card">
+    <h2>Aula 5 - HTML Avançado</h2>
+    <p>Aprenda de forma mais avançada sobre o HTML.</p>
+    <a href="aula5-htmlavancado.html">Acessar aula →</a>
+  </div>
+
+  <div class="card">
+    <h2>Aula 6 - CSS básico</h2>
+    <p>Aprenda a modicar personalizar a aparência da sua página web.</p>
+    <a href="aula6-cssbasico.html">Acessar aula →</a>
+  </div>
+
+  <div class=card>
+    <h2>Aula 7 - CSS Avançado</h2>
+    <p>Personalise profissionalmente seu site.</p>
+    <a href="aula7-cssavancado.html">Acessar aula →</a>
+  </div>
 </section>
 
 </main>
@@ -63,4 +80,3 @@
 
 </body>
 </html>
-
