--- a/aula2-logica.html
+++ b/aula2-logica.html
@@ -5,6 +5,7 @@
   <title>Aula 2 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula X">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -173,3 +174,4 @@
 
 </body>
 </html>
+
