--- a/aula3-algoritmos.html
+++ b/aula3-algoritmos.html
@@ -5,6 +5,7 @@
   <title>Aula 3 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -244,3 +245,4 @@ O código nada mais é do que a tradução desses passos para uma linguagem que 
 
 </body>
 </html>
+
