--- a/aula4-htmlbasico.html
+++ b/aula4-htmlbasico.html
@@ -5,6 +5,7 @@
   <title>Aula 4 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -187,3 +188,4 @@
 
 </body>
 </html>
+
