--- a/aula5-htmlavancado.html
+++ b/aula5-htmlavancado.html
@@ -5,6 +5,7 @@
   <title>Aula 5 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -184,3 +185,4 @@
 <footer>
   <p>© 2026 Curso de Programação</p>
 </footer>
+
