--- a/aula6-cssbasico.html
+++ b/aula6-cssbasico.html
@@ -5,6 +5,7 @@
   <title>Aula 6 | Curso de Programação</title>
   <meta name="description" content="Curso completo de programação - Aula 1">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -187,4 +188,5 @@
 
 <footer>
   <p>© 2026 Curso de Programação</p>
+
 </footer>
