--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
   <title>Contato | Curso de Programação</title>
   <meta name="description" content="Entre em contato com o Curso Completo de Programação">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -36,3 +37,4 @@
 
 </body>
 </html>
+
