--- a/post.html
+++ b/post.html
@@ -5,6 +5,7 @@
 <title>Introdução à Programação</title>
 <meta name="description" content="Aula completa de introdução à programação">
 <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -65,3 +66,4 @@
 
 </body>
 </html>
+
