--- a/privacidade.html
+++ b/privacidade.html
@@ -5,6 +5,7 @@
   <title>Política de Privacidade | Curso de Programação</title>
   <meta name="description" content="Política de Privacidade do Curso de Programação">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -45,3 +46,4 @@
 
 </body>
 </html>
+
