--- a/termos.html
+++ b/termos.html
@@ -5,6 +5,7 @@
   <title>Termos de Uso | Curso de Programação</title>
   <meta name="description" content="Termos de Uso do Curso de Programação">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -44,3 +45,4 @@
 
 </body>
 </html>
+
