--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="contato.html">Contato</a>
     <a href="privacidade.html">Privacidade</a>
     <a href="termos.html">Termos</a>
+<button onclick="logout()" class="logout-btn">Sair</button>
 
   </nav>
 </header>
@@ -48,6 +49,7 @@
 <footer>
 <p>© 2026 Curso de Programação</p>
 </footer>
+<script src="js/logout.js"></script>
 
 </body>
 </html>
