--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entrar | Curso de Programação</title>
   <link rel="stylesheet" href="css/auth.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -23,3 +24,4 @@
 <script src="js/auth.js"></script>
 </body>
 </html>
+
